--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,5 +2,6 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/css/header.css": "/css/header.css",
-    "/css/footer.css": "/css/footer.css"
+    "/css/footer.css": "/css/footer.css",
+    "/js/scripts.js": "/js/scripts.js"
 }
