--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,6 +2,5 @@
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
     "/css/header.css": "/css/header.css",
-    "/css/footer.css": "/css/footer.css",
-    "/js/scripts.js": "/js/scripts.js"
+    "/css/footer.css": "/css/footer.css"
 }
