--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/header.css": "/css/header.css",
-    "/css/footer.css": "/css/footer.css",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/images/banner.jpg": "/images/banner.jpg"
 }
