Finished creating hover effects on buttons inside homepage, video component, form element styles

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -3,5 +3,6 @@
     "/images/banner.jpg": "/images/banner.jpg",
     "/images/Layer_7_copy_2.svg": "/images/Layer_7_copy_2.svg",
     "/images/placeholder.jpg": "/images/placeholder.jpg",
+    "/images/player_button.png": "/images/player_button.png",
     "/css/app.css": "/css/app.css"
 }
