--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@ Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-/.idea/laravel-plugin.xml
+#/.idea/laravel-plugin.xml
+/.idea/
 /public/
 package-lock.json
 composer.lock
