range slider styled using plugin

--- a/package.json
+++ b/package.json
@@ -30,5 +30,7 @@
         "vue-template-compiler": "^2.6.10",
         "webpack-cli": "^3.3.5"
     },
-    "dependencies": {}
+    "dependencies": {
+        "input-range-scss": "^1.5.2"
+    }
 }
