--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "autoprefixer": "^9.6.1",
         "axios": "^0.18",
         "bootstrap": "^4.1.0",
+        "bootstrap-select": "^1.13.10",
         "browser-sync": "^2.26.7",
         "browser-sync-webpack-plugin": "^2.2.2",
         "cross-env": "^5.1",
