--- a/package.json
+++ b/package.json
@@ -31,5 +31,7 @@
         "vue-template-compiler": "^2.6.10",
         "webpack-cli": "^3.3.5"
     },
-    "dependencies": {}
+    "dependencies": {
+        "cookieconsent": "^3.1.1"
+    }
 }
