--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.22.9",
         "sass-loader": "^7.1.0",
+        "stickybits": "^3.6.6",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10",
         "webpack-cli": "^3.3.5"
