--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "gulp": "^4.0.2",
         "jquery": "^3.4.1",
         "laravel-mix": "^4.1.2",
+        "laravel-mix-copy-watched": "^2.1.4",
         "lodash": ">=4.17.13",
         "popper.js": "^1.12",
         "postcss-flexbugs-fixes": "^4.1.0",
