dr stevini hover

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -35,6 +35,7 @@
     "/images/special.svg": "/images/special.svg",
     "/images/star.svg": "/images/star.svg",
     "/images/tick-green.svg": "/images/tick-green.svg",
+    "/images/up-arrow-pink.svg": "/images/up-arrow-pink.svg",
     "/images/up-arrow.svg": "/images/up-arrow.svg",
     "/images/Image 3.png": "/images/Image 3.png",
     "/images/Image 3@2x.png": "/images/Image 3@2x.png",
