--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "webpack-cli": "^3.3.5"
     },
     "dependencies": {
+        "animate.css": "^3.7.2",
         "cookieconsent": "^3.1.1"
     }
 }
