--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "animate.css": "^3.7.2",
-        "cookieconsent": "^3.1.1"
+        "cookieconsent": "^3.1.1",
+        "jquery-validation": "^1.19.1"
     }
 }
