--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dependencies": {
         "animate.css": "^3.7.2",
         "cookieconsent": "^3.1.1",
-        "jquery-validation": "^1.19.1"
+        "jquery-validation": "^1.19.1",
+        "webpack-jquery-ui": "^2.0.1"
     }
 }
