New slider using bootstrap slider plugin

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     },
     "dependencies": {
         "animate.css": "^3.7.2",
+        "bootstrap-slider": "^10.6.2",
         "cookieconsent": "^3.1.1",
         "jquery-validation": "^1.19.1",
         "webpack-jquery-ui": "^2.0.1"
