--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "jenssegers/agent": "^2.6",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "nothingworks/blade-svg": "^0.3.2"
+        "nothingworks/blade-svg": "^0.3.2",
+        "spatie/laravel-sitemap": "^5.6"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
