--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
         "prod-watch": "npm run production -- --watch"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/preset-react": "^7.8.3",
         "autoprefixer": "^9.7.3",
-        "axios": "^0.18",
+        "axios": "^0.18.1",
         "bootstrap": "^4.4.1",
         "bootstrap-select": "^1.13.12",
         "browser-sync": "^2.26.7",
@@ -38,6 +40,9 @@
         "cookieconsent": "^3.1.1",
         "jquery-validation": "^1.19.1",
         "js-cookie": "^2.2.1",
+        "react": "^16.13.0",
+        "react-dom": "^16.13.0",
+        "react-router-dom": "^5.1.2",
         "webpack-jquery-ui": "^2.0.1"
     }
 }
