--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "jquery-validation": "^1.19.1",
         "js-cookie": "^2.2.1",
         "react": "^16.13.0",
+        "react-bootstrap": "^1.0.1",
         "react-dom": "^16.13.0",
         "react-router-dom": "^5.1.2",
         "webpack-jquery-ui": "^2.0.1"
