--- a/package.json
+++ b/package.json
@@ -45,8 +45,7 @@
         "react-bootstrap": "^1.0.1",
         "react-dom": "^16.13.0",
         "react-router-dom": "^5.1.2",
-        "react-select-picker": "0.0.7",
-        "react-select-search": "^1.1.2",
+        "react-select": "^3.1.0",
         "webpack-jquery-ui": "^2.0.1"
     }
 }
