--- a/package.json
+++ b/package.json
@@ -44,8 +44,12 @@
         "react": "^16.13.0",
         "react-bootstrap": "^1.0.1",
         "react-dom": "^16.13.0",
+        "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
         "react-select": "^3.1.0",
+        "redux": "^4.0.5",
+        "redux-devtools-extension": "^2.13.8",
+        "redux-thunk": "^2.3.0",
         "webpack-jquery-ui": "^2.0.1"
     }
 }
